@@ -138,6 +138,12 @@ int PrismaticJoint::getLimits(lua_State *L)
 	return 2;
 }
 
+int PrismaticJoint::getAxis(lua_State *L)
+{
+	lua_pushnumber(L, joint->GetLocalAxisA().x);
+	lua_pushnumber(L, joint->GetLocalAxisA().y);
+	return 2;
+}
 
 } // box2d
 } // physics
